Fixed overflowing images issue

--- a/style.css
+++ b/style.css
@@ -9,14 +9,18 @@
     font-family: "Lato", sans-serif;
     margin: 0px;
 }
+img{
+    max-width: 100%;
+    height: auto;
+}
 
 .banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     background-color: rgba(229, 84, 115, 0.10);
     padding-left: 50px;
+    
 
 }
 
@@ -49,11 +53,6 @@
     font-weight: 700;
 }
 
-.banner-image {
-
-    width: 50%;
-    height: auto;
-}
 
 .ff-title,
 .ff-desc {
@@ -65,6 +64,7 @@
     font-size: 40px;
     font-weight: 800;
     margin-top: 180px;
+    margin-bottom: 25px;
 }
 
 .ff-desc {
@@ -80,10 +80,14 @@
     justify-content: center;
     align-items: center;
     gap: 25px;
-    margin: 0px 240px 32px 240px;
+    margin: 0px 10px 32px 10px;
+    /* background-color: aqua; */
+    overflow: hidden;
+   /*  width: 100%;
+    height: auto; */
 }
 
-.featured-flowers-container .featured-flowers-1 {
+.featured-flowers-container .featured-flowers-1  {
     width: 50%;
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
@@ -176,6 +180,7 @@
     background-repeat: no-repeat;
     padding: 100px;
     margin-bottom: 130px;
+    background-size: cover;
     /* background-size: cover; */
 }
 .subscribe-container .subscribe-text{
